# SlicerTrame

./: .gitignore  CMakeLists.txt  FetchVTKExternalModule.cmake  README.md  README.rst  SuperBuild.cmake  SuperBuildPrerequisites.cmake
.github/workflows/: pre_commit_and_test.yml
SlicerTrameServer/: CMakeLists.txt  SlicerTrameServer.py  requirements.txt
SlicerTrameServer/Resources/: slicer_trame_bootstrap_template.py
SlicerTrameServer/Resources/Examples/: minimal_trame_slicer_app.py
SlicerTrameServer/Testing/: SlicerTrameServerTestCase.py  minimal_trame_slicer_app.py
SlicerTrameServer/tests/: test_slicer_trame_server.py
SuperBuild/: External_vtkWebCore.cmake  External_vtkWebGLExporter.cmake
